--- a/src/paginaPersonal.html
+++ b/src/paginaPersonal.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Mi Página Personal</title>
-  <link rel="icon" type="image/png" href="/assets/Foto Personal.png" />
+  <link rel="icon" type="image/png" href="../assets/Foto Personal.png" />
 </head>
 
 <body style="background-color: rgb(243, 234, 234)">
@@ -11,7 +11,7 @@
       <tr>
         <td width="700">
           <img
-            src="assets/Foto Personal.png"
+            src="../assets/Foto Personal.png"
             alt="Fotografia Personal"
             height="185"
             width="147"
@@ -135,25 +135,25 @@
 
       <h3>Imágenes Favoritas</h3>
       <img
-        src="/assets/Berserk Wallpaper.jpg"
+        src="../assets/Berserk Wallpaper.jpg"
         alt="Berserk Wallpaper"
         height="250"
         width="450"
       />
       <img
-        src="/assets/AoT Wallpaper.png"
+        src="../assets/AoT Wallpaper.png"
         alt="AoT Wallpaper"
         height="250"
         width="450"
       />
       <img
-        src="/assets/Arthas Wallpaper.jpg"
+        src="../assets/Arthas Wallpaper.jpg"
         alt="Arthas Wallpaper"
         height="250"
         width="450"
       />
       <img
-        src="/assets/LoL Wallpaper.jpg"
+        src="../assets/LoL Wallpaper.jpg"
         alt="LoL Wallpaper"
         height="250"
         width="450"
@@ -221,7 +221,7 @@
             href="https://www.facebook.com/people/Carlos-Torres/100001250455546"
             target="_blank"
             ><img
-              src="assets/facebook logo.png"
+              src="../assets/facebook logo.png"
               alt="Perfil de Facebook"
               height="30"
               width="30"
@@ -230,7 +230,7 @@
         <td align="center">
           <a href="https://www.instagram.com/carlostorres74/" target="_blank"
             ><img
-              src="assets/instagram logo.png"
+              src="../assets/instagram logo.png"
               alt="Perfil de Instagram"
               height="30"
               width="30"
@@ -241,7 +241,7 @@
             href="https://www.youtube.com/user/WereW0lf74/featured"
             target="_blank"
             ><img
-              src="assets/youtube logo.png"
+              src="../assets/youtube logo.png"
               alt="Canal de Youtube"
               height="30"
               width="30"
